--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
 
 apply plugin: 'org.inferred.processors'
 apply plugin: 'idea'
+apply plugin: 'eclipse'
 
 apply from: rootProject.projectDir.path + '/gradle/scripts/jacoco-coveralls-support.gradle'
 
