--- a/gobblin-yarn/build.gradle
+++ b/gobblin-yarn/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'java'
 dependencies {
   compile project(":gobblin-admin")
   compile project(":gobblin-api")
+  compile project(":gobblin-cluster")
   compile project(":gobblin-core")
   compile project(":gobblin-metrics")
   compile project(":gobblin-metastore")
