--- a/gobblin-runtime/build.gradle
+++ b/gobblin-runtime/build.gradle
@@ -46,6 +46,7 @@ dependencies {
   compile externalDependency.guice
   compile externalDependency.javaxInject
   compile externalDependency.lombok
+  compile externalDependency.typesafeConfig
   if (useHadoop2) {
     compile externalDependency.avroMapredH2
   } else {
