--- a/gradle/scripts/dependencyDefinitions.gradle
+++ b/gradle/scripts/dependencyDefinitions.gradle
@@ -32,6 +32,7 @@ ext.externalDependency = [
     "awsIam": "com.amazonaws:aws-java-sdk-iam:" + awsVersion,
     "awsS3": "com.amazonaws:aws-java-sdk-s3:" + awsVersion,
     "awsSts": "com.amazonaws:aws-java-sdk-sts:" + awsVersion,
+    "azureCore": "com.microsoft.azure:azure:" + azureVersion,
     "commonsCli": "commons-cli:commons-cli:1.3.1",
     "commonsCodec": "commons-codec:commons-codec:1.10",
     "commonsDbcp": "commons-dbcp:commons-dbcp:1.4",
