--- a/settings.gradle
+++ b/settings.gradle
@@ -40,6 +40,7 @@ def modules = ['gobblin-admin',
                'gobblin-yarn',
                'gobblin-cluster',
                'gobblin-aws',
+               'gobblin-azure',
                'gobblin-service',
                'gobblin-test-utils']
 
