--- a/gobblin-azure/build.gradle
+++ b/gobblin-azure/build.gradle
@@ -18,6 +18,8 @@
 apply plugin: 'java'
 
 dependencies {
+  compile externalDependency.guava19
+
   compile project(":gobblin-api")
   compile project(":gobblin-cluster")
   compile project(":gobblin-core")
@@ -53,6 +55,9 @@ configurations {
 configurations {
   compile {
     transitive = false
+    resolutionStrategy {
+      force 'com.google.guava:guava:19.0'
+    }
   }
 
   testRuntime {
