--- a/gradle/scripts/dependencyDefinitions.gradle
+++ b/gradle/scripts/dependencyDefinitions.gradle
@@ -49,6 +49,7 @@ ext.externalDependency = [
     "datanucleusRdbms": "org.datanucleus:datanucleus-rdbms:3.2.9",
     "eventhub": "com.microsoft.azure:azure-eventhubs:0.9.0",
     "guava": "com.google.guava:guava:15.0",
+    "guava19": "com.google.guava:guava:19.0",
     "gson": "com.google.code.gson:gson:2.6.2",
     "findBugsAnnotations": "com.google.code.findbugs:jsr305:" + findBugsVersion,
     "hadoopCommon": "org.apache.hadoop:hadoop-common:" + hadoopVersion,
